--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "goldshi"
 version = "0.1.0"
-description = "Add your description here"
+description = "Simple CLI image manipulation"
 readme = "README.md"
 authors = [
     { name = "saubuny", email = "saubuny@gmail.com" }
